--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,9 @@ jobs:
         name: Build
         command: GIT_BRANCH=$CIRCLE_BRANCH make
     - run:
+        name: Get Version
+        command: GIT_BRANCH=$CIRCLE_BRANCH make version
+    - run:
         name: Test
         command: GIT_BRANCH=$CIRCLE_BRANCH make test
     - run:
