--- a/files/libpod.conf
+++ b/files/libpod.conf
@@ -8,8 +8,8 @@ no_pivot_root = false
 cni_config_dir = "/etc/cni/net.d/"
 cni_plugin_dir = ["/usr/libexec/cni"]
 cni_default_network = "podman"
-pause_image = "k8s.gcr.io/pause:3.1"
-pause_command = "/pause"
+infra_image = "k8s.gcr.io/pause:3.1"
+infra_command = "/pause"
 num_locks = 2048
 runtime = "runc"
 
