--- a/config.env
+++ b/config.env
@@ -1,2 +1,5 @@
 IMAGE_NAME=marshallford/podman
-PODMAN_VERSION=1.4.2
+CONMON_VERSION=0.3.0
+RUNC_VERSION=1.0.0-rc8
+CNI_PLUGINS_VERSION=0.8.1
+PODMAN_VERSION=1.4.3
