--- a/files/registries.conf
+++ b/files/registries.conf
@@ -5,11 +5,11 @@
 
 # The default location for this configuration file is /etc/containers/registries.conf.
 
-# The only valid categories are: 'registries.search', 'registries.insecure', 
+# The only valid categories are: 'registries.search', 'registries.insecure',
 # and 'registries.block'.
 
 [registries.search]
-registries = ['docker.io', 'registry.fedoraproject.org', 'registry.access.redhat.com']
+registries = ['docker.io', 'quay.io', 'registry.fedoraproject.org']
 
 # If you need to access insecure registries, add the registry's fully-qualified name.
 # An insecure registry is one that does not have a valid SSL certificate or only does HTTP.
