cni plugins 0.8.2, updated config files

--- a/files/libpod.conf
+++ b/files/libpod.conf
@@ -4,14 +4,16 @@
 # Default transport method for pulling and pushing for images
 image_default_transport = "docker://"
 
-# Paths to look for the Conmon container manager binary
+# Paths to look for the conmon container manager binary.
+# If the paths are empty or no valid path was found, then the `$PATH`
+# environment variable will be used as the fallback.
 conmon_path = [
-    "/usr/bin/conmon"
+	    "/usr/bin/conmon"
 ]
 
 # Environment variables to pass into conmon
 conmon_env_vars = [
-    "PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+  "PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 ]
 
 # CGroup Manager - valid values are "systemd" and "cgroupfs"
@@ -41,7 +43,7 @@ cni_config_dir = "/etc/cni/net.d/"
 
 # Directories where the CNI plugin binaries may be located
 cni_plugin_dir = [
-    "/usr/lib/cni"
+	       "/usr/lib/cni"
 ]
 
 # Default CNI network for libpod.
@@ -78,6 +80,9 @@ infra_command = "/pause"
 # Default libpod support for container labeling
 # label=true
 
+# The locking mechanism to use
+lock_type = "shm"
+
 # Number of locks available for containers and pods.
 # If this is changed, a lock renumber must be performed (e.g. with the
 # 'podman system renumber' command).
@@ -93,6 +98,13 @@ num_locks = 2048
 # are `journald` or `file`.
 events_logger = "file"
 
+# Specify the keys sequence used to detach a container.
+# Format is a single character [a-Z] or a comma separated sequence of
+# `ctrl-<value>`, where `<value>` is one of:
+# `a-z`, `@`, `^`, `[`, `\`, `]`, `^` or `_`
+#
+# detach_keys = "ctrl-p,ctrl-q"
+
 # Default OCI runtime
 runtime = "runc"
 
@@ -101,9 +113,11 @@ runtime = "runc"
 runtime_supports_json = ["runc"]
 
 # Paths to look for a valid OCI runtime (runc, runv, etc)
+# If the paths are empty or no valid path was found, then the `$PATH`
+# environment variable will be used as the fallback.
 [runtimes]
 runc = [
-    "/usr/bin/runc"
+	    "/usr/bin/runc"
 ]
 
 # The [runtimes] table MUST be the last thing in this file.
