--- a/files/libpod.conf
+++ b/files/libpod.conf
@@ -8,7 +8,7 @@ image_default_transport = "docker://"
 # If the paths are empty or no valid path was found, then the `$PATH`
 # environment variable will be used as the fallback.
 conmon_path = [
-	    "/usr/bin/conmon"
+	"/usr/bin/conmon"
 ]
 
 # Environment variables to pass into conmon
@@ -43,7 +43,7 @@ cni_config_dir = "/etc/cni/net.d/"
 
 # Directories where the CNI plugin binaries may be located
 cni_plugin_dir = [
-	       "/usr/lib/cni"
+	"/usr/lib/cni"
 ]
 
 # Default CNI network for libpod.
@@ -110,14 +110,23 @@ runtime = "runc"
 
 # List of the OCI runtimes that support --format=json.  When json is supported
 # libpod will use it for reporting nicer errors.
-runtime_supports_json = ["runc"]
+runtime_supports_json = ["crun", "runc"]
+
+# List of all the OCI runtimes that support --cgroup-manager=disable to disable
+# creation of CGroups for containers.
+runtime_supports_nocgroups = ["crun"]
 
 # Paths to look for a valid OCI runtime (runc, runv, etc)
 # If the paths are empty or no valid path was found, then the `$PATH`
 # environment variable will be used as the fallback.
 [runtimes]
 runc = [
-	    "/usr/bin/runc"
+	"/usr/bin/runc"
+]
+
+crun = [
+  "/usr/bin/crun",
+	"/usr/local/bin/crun",
 ]
 
 # The [runtimes] table MUST be the last thing in this file.
