conmon 2.0.3, cni plugins 0.8.3, update config files, bump deps

--- a/files/libpod.conf
+++ b/files/libpod.conf
@@ -8,12 +8,12 @@ image_default_transport = "docker://"
 # If the paths are empty or no valid path was found, then the `$PATH`
 # environment variable will be used as the fallback.
 conmon_path = [
-	"/usr/bin/conmon"
+  "/usr/bin/conmon"
 ]
 
 # Environment variables to pass into conmon
 conmon_env_vars = [
-  "PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+	"PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 ]
 
 # CGroup Manager - valid values are "systemd" and "cgroupfs"
@@ -43,7 +43,7 @@ cni_config_dir = "/etc/cni/net.d/"
 
 # Directories where the CNI plugin binaries may be located
 cni_plugin_dir = [
-	"/usr/lib/cni"
+  "/usr/lib/cni"
 ]
 
 # Default CNI network for libpod.
@@ -121,13 +121,27 @@ runtime_supports_nocgroups = ["crun"]
 # environment variable will be used as the fallback.
 [runtimes]
 runc = [
-	"/usr/bin/runc"
+  "/usr/bin/runc"
 ]
 
-crun = [
-  "/usr/bin/crun",
-	"/usr/local/bin/crun",
-]
+crun = []
+
+# Kata Containers is an OCI runtime, where containers are run inside lightweight
+# Virtual Machines (VMs). Kata provides additional isolation towards the host,
+# minimizing the host attack surface and mitigating the consequences of
+# containers breakout.
+# Please notes that Kata does not support rootless podman yet, but we can leave
+# the paths below blank to let them be discovered by the $PATH environment
+# variable.
+
+# Kata Containers with the default configured VMM
+kata-runtime = []
+
+# Kata Containers with the QEMU VMM
+kata-qemu = []
+
+# Kata Containers with the Firecracker VMM
+kata-fc = []
 
 # The [runtimes] table MUST be the last thing in this file.
 # (Unless another table is added)
